# termux-mcp

./: .gitignore  README.md  README_CN.md  pyproject.toml  start-mcp.sh
docs/: removed-tools.md
termux_mcp/: __init__.py  __main__.py  __main_mcp__.py  config.py  handler.py  mcp_bridge.py  mcp_server.py  mcp_tools.py  registry.py  security.py  shell.py  utils.py  websocket.py
termux_mcp/handlers/: __init__.py  ai_power.py  basic.py  device.py  features.py  history.py  terminal.py  tools.py
