[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "termux-mcp"
version = "1.0.0"
description = "Standalone MCP server for Termux — 88+ tools for AI agents via Model Context Protocol"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "TruthZY"}]
requires-python = ">=3.8"

[project.scripts]
termux-mcp = "termux_mcp.__main__:main"
